镜像/收藏请求压缩图片
